RESOLVED FIXED62763
WKSecurityOriginGetProtocol and WKSecurityOriginGetHost are named wrong because they return copied strings
https://bugs.webkit.org/show_bug.cgi?id=62763
Summary WKSecurityOriginGetProtocol and WKSecurityOriginGetHost are named wrong becau...
John Sullivan
Reported 2011-06-15 16:07:29 PDT
WKSecurityOriginGetProtocol and WKSecurityOriginGetHost are named as if they return a pre-existing object, but they actually return copied strings. This leads to leaks in callers that don't know to take ownership responsibility for the return values. <rdar://problem/9618071>
Attachments
Patch to update the two names to correctly reflect their behavior. (2.66 KB, patch)
2011-06-15 16:10 PDT, John Sullivan
sam: review+
John Sullivan
Comment 1 2011-06-15 16:10:09 PDT
Created attachment 97373 [details] Patch to update the two names to correctly reflect their behavior.
John Sullivan
Comment 2 2011-06-15 16:18:57 PDT
Note You need to log in before you can comment on or make changes to this bug.