WKSecurityOriginGetProtocol and WKSecurityOriginGetHost are named wrong because they return copied strings <https://bugs.webkit.org/show_bug.cgi?id=62763> <rdar://problem/9618071>

Reviewed by Sam Weinig.

* Shared/API/c/WKSecurityOrigin.cpp:
(WKSecurityOriginCopyProtocol):
Renamed to use "Copy" instead of "Get" because it returns a copy.
(WKSecurityOriginCopyHost):
Ditto.

* Shared/API/c/WKSecurityOrigin.h:
Updated declarations.



Canonical link: https://commits.webkit.org/78328@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@88983 268f45cc-cd09-0410-ab3c-d52691b4dbfc